--- a/cours.css
+++ b/cours.css
@@ -1,6 +1,6 @@
 *{
     font-size: 1em;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: 10px;
 }
 h1{
@@ -12,6 +12,7 @@ h1{
 }
 h2{
     font-size: 1.5em;
+    text-decoration: underline;
 }
 h2,
 h1,
