--- a/cours.css
+++ b/cours.css
@@ -40,3 +40,9 @@ header{
     margin-bottom: 25px;
     border: 1px solid black;
 }
+.partie h4,
+.partie br,
+.partie li,
+.partie p{
+    margin-left: 20px;
+}
