--- a/cours.css
+++ b/cours.css
@@ -4,15 +4,27 @@
     margin: 10px;
 }
 h1{
-    font-size: 2em;
+    font-size: 2.5em;
     color: rgb(141, 22, 22);
     align-items: center;
     text-align: center;
     margin-bottom: 5em;
+    background-color: rgb(44, 44, 44);
+    padding: 15px;
 }
 h2{
-    font-size: 1.5em;
+    font-size: 2em;
     text-decoration: underline;
+    text-align: center;
+    margin: 25px 0;
+}
+h3{
+    font-size: 1.5em;
+    margin: 20px 0;
+    background-color: rgb(226, 226, 226) ;
+    border: 7px ridge goldenrod;
+    padding: 10px;
+;
 }
 h2,
 h1,
@@ -44,4 +56,10 @@ header{
 .partie li,
 .partie p{
     margin-left: 20px;
+}
+
+.exemple{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
