--- a/cours.css
+++ b/cours.css
@@ -1,7 +1,7 @@
 *{
     font-size: 1em;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    margin: 10px;
+    /* margin: 10px; */
 }
 h1{
     font-size: 2.5em;
