--- a/cours.css
+++ b/cours.css
@@ -49,7 +49,7 @@ header{
 .partie{
     margin-top: 25px;
     margin-bottom: 25px;
-    border: 1px solid black;
+    border: medium solid black;
 }
 .partie br,
 .partie li,
@@ -61,4 +61,8 @@ header{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+}
+.border{
+    border-top: 1px solid black;
+    border-top-width: 1px;
 }
