--- a/cours.css
+++ b/cours.css
@@ -25,6 +25,9 @@ h3{
     border: 7px ridge goldenrod;
     padding: 10px;
 }
+h4{
+    text-decoration: underline;
+}
 h2,
 h1,
 h3,
@@ -65,4 +68,7 @@ header{
 .border{
     border-top: 1px solid black;
     border-top-width: 1px;
+}
+.p{
+    text-align: center;
 }
