--- a/cours.css
+++ b/cours.css
@@ -27,6 +27,7 @@ h3{
 }
 h4{
     text-decoration: underline;
+    margin-left: 15px;
 }
 h2,
 h1,
@@ -64,6 +65,8 @@ header{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    margin-top: 15px;
+    line-height: 1.5;
 }
 .border{
     border-top: 1px solid black;
